Refactor request body reading and update empty list returns for consistency